bugfix: 从多个.tours文件夹加载